updated pet shop project

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "lint": "eslint",
     "start": "nodemon",
-    "test": "mocha"
+    "test": "mocha",
+    "dev": "nodemon restfulExpressServer.js",
+    "Start": "node restfulExpressServer.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,7 @@
   },
   "homepage": "https://github.com/gSchool/fs-pet-shop#readme",
   "dependencies": {
+    "express": "^4.18.1",
     "nodemon": "^1.9.1"
   },
   "devDependencies": {
