--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
   "homepage": "https://github.com/gSchool/fs-pet-shop#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "nodemon": "^1.9.1"
+    "nodemon": "^2.0.16",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.0.2",
+    "mocha": "^10.0.0",
     "rewire": "^2.5.2",
-    "supertest": "^2.0.0"
+    "supertest": "^6.2.3"
   }
 }
